# truth

./: .travis.yml  CMakeLists.txt  README.md  mc.yaml
bundle-header-only-library/: CMakeLists.txt
bundle-header-only-library/src/: main.c++
bundle-header-only-library/test/BasicTest/: BasicTest.c++  CMakeLists.txt
bundle-header-only-library/test/BasicTest/include/: include-1.h++  root.h++
bundle-header-only-library/test/BasicTest/include/dir/: include-2.h++
bundle-header-only-library/test/TruthTest/: CMakeLists.txt  TruthTest.c++
defaults/: CMakeLists.txt
truth/: CMakeLists.txt
truth-impl/: CMakeLists.txt
truth-impl/include/truth/: AssertionError.h++  AssertionErrorFactory.h++  BooleanSubject.h++  Fact.h++  SimpleSubjectBuilder.h++  StandardSubjectBuilder.h++  StringSubject.h++  Subject.h++  SubjectFactory.h++
truth-impl/src/: AssertionError.c++  BooleanSubject.c++  Fact.c++  LazyMessage.c++  SimpleSubjectBuilder.c++  StandardSubjectBuilder.c++  StringSubject.c++  Subject.c++  SubjectFactory.c++
truth-impl/test/AboutTest/: AboutTest.c++  CMakeLists.txt
truth-impl/test/BooleanSubjectTest/: CMakeLists.txt
truth-impl/test/StringSubjectTest/: CMakeLists.txt  StringSubjectTest.c++
truth/include/truth/: FailureMetadata.h++  FailureStrategy.h++  LazyMessage.h++  Subject.h++  SubjectFactory.h++  ThrowAssertionErrorFailureStrategy.h++  Truth.h++
truth/src/: AssertionErrorFactory.c++  FailureMetadata.c++  FailureStrategy.c++  ThrowAssertionErrorFailureStrategy.c++  Truth.c++
truth/test/AboutTest/: AboutTest.c++
truth/test/BooleanSubjectTest/: BooleanSubjectTest.c++
truth/test/SimpleTest/: CMakeLists.txt  SimpleTest.c++
truth/test/WithMessageTest/: CMakeLists.txt  WithMessageTest.c++
